--- a/style.css
+++ b/style.css
@@ -5,41 +5,88 @@
     border-radius: 50px;
     padding: 15px;
     flex-direction: row;
+    justify-content: center;
     
 }
+
 
 .Groceries{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-direction: row;
-  
-    
-    
+    gap: 20px;
 }
 
-.Groceries image{
-    width: 50%;
-    height: 50%;
-
-}
 
 #milk{
     background: cornsilk;
     width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
+    text-align: justify;
+
+
+
 }
+
+
+
 #eggs{
     background-color: cornsilk;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
+    
 }
 #banana{
     background-color: cornsilk;
+    width: 300px;
+    height: 300px;
+    background-origin: padding-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
 }
 #bread{
     background-color: cornsilk;
+    width: 300px;
+    height: 300px;
+    background-origin: padding-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
 }
 #rice{
     background-color: cornsilk;
+    width: 300px;
+    height: 300px;
+    background-origin: padding-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
 }
 #flour{
     background-color: cornsilk;
+    width: 300px;
+    height: 300px;
+    background-origin: padding-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: center;
 }
