--- a/style.css
+++ b/style.css
@@ -12,81 +12,46 @@
 
 .Groceries{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-
-#milk{
-    background: cornsilk;
-    width: 300px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
     align-items: center;
-    text-align: justify;
-
-
-
+    text-align: center;
 }
 
 
+.Milk{
+  background-color: antiquewhite;
+  width: 300px;
+  height: 300px;
+}
 
-#eggs{
-    background-color: cornsilk;
+.Eggs{
+    background-color: antiquewhite;
     width: 300px;
     height: 300px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
-    
 }
-#banana{
-    background-color: cornsilk;
+
+.Banana{
+    background-color: antiquewhite;
     width: 300px;
     height: 300px;
-    background-origin: padding-box;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
 }
-#bread{
-    background-color: cornsilk;
+
+.Bread{
+    background-color: antiquewhite;
     width: 300px;
     height: 300px;
-    background-origin: padding-box;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
 }
-#rice{
-    background-color: cornsilk;
+
+.Sugar{
+    background-color: antiquewhite;
     width: 300px;
     height: 300px;
-    background-origin: padding-box;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
 }
-#flour{
-    background-color: cornsilk;
+
+.Flour{
+    background-color: antiquewhite;
     width: 300px;
     height: 300px;
-    background-origin: padding-box;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    align-items: center;
 }
+
