--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 
 #Banner{
+    display: flex;
+    justify-content: center;
     background-color:antiquewhite;
     text-align: center;
-    border-radius: 50px;
+    border-radius: 70px;
     padding: 15px;
+    margin: 30px;
    
+   
+    
 
     
 }
@@ -13,7 +18,7 @@
 .Groceries{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -29,6 +34,7 @@
   animation-name: colorswitch;
   animation-duration: 4s;
   animation-iteration-count: infinite;
+  border-radius: 20px;
 }
 
 .Milk:hover{
@@ -45,11 +51,13 @@
     animation-name: colorswitch;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    border-radius: 20px;
 }
 
 .Eggs:hover{
     width: 400px;
     height: 400px;
+    border-radius: 20px;
 
 }
 
@@ -61,11 +69,13 @@
     animation-name: colorswitch;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    border-radius: 20px;
 }
 
 .Banana:hover{
     width: 400px;
     height: 400px;
+    
 
 }
 
@@ -76,6 +86,7 @@
     animation-name: colorswitch;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    border-radius: 20px;
 }
 .Bread:hover{
     width: 400px;
@@ -90,6 +101,7 @@
     animation-name: colorswitch;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    border-radius: 20px;
 }
 
 .Sugar:hover{
@@ -105,6 +117,7 @@
     animation-name: colorswitch;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    border-radius: 20px;
 }
 
 .Flour:hover{
